@@ -44,6 +44,10 @@ COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERWIDTH_LABEL="Player Width"
 COM_PODCASTMANAGER_CONFIG_FIELD_TITLE_DEFAULT="My Podcast"
 COM_PODCASTMANAGER_CONFIG_FIELD_TITLE_DESCRIPTION="The title of the podcast."
 COM_PODCASTMANAGER_CONFIG_FIELD_TITLE_LABEL="Title"
+COM_PODCASTMANAGER_DIRECTION_ASC_LABEL="Ascending"
+COM_PODCASTMANAGER_DIRECTION_DESC_LABEL="Descending"
+COM_PODCASTMANAGER_DIRECTION_DESCRIPTION="Sort in ascending (A-Z) or descending (Z-A) order, defaults to Descending."
+COM_PODCASTMANAGER_DIRECTION_LABEL="Order direction"
 COM_PODCASTMANAGER_FEED_FIELD_COPYRIGHT_DESCRIPTION="The copyright of the podcast."
 COM_PODCASTMANAGER_FEED_FIELD_COPYRIGHT_LABEL="Copyright"
 COM_PODCASTMANAGER_FEED_FIELD_DESCRIPTION_DESCRIPTION="A short description of the podcast."
@@ -107,6 +111,10 @@ COM_PODCASTMANAGER_N_ITEMS_TRASHED="%d podcasts successfully trashed"
 COM_PODCASTMANAGER_N_ITEMS_TRASHED_1="%d podcast successfully trashed"
 COM_PODCASTMANAGER_N_ITEMS_UNPUBLISHED="%d podcasts successfully unpublished"
 COM_PODCASTMANAGER_N_ITEMS_UNPUBLISHED_1="%d podcast successfully unpublished"
+COM_PODCASTMANAGER_ORDER_DESCRIPTION="Select the column to sort the output by, defaults to Published."
+COM_PODCASTMANAGER_ORDER_LABEL="Order by"
+COM_PODCASTMANAGER_ORDER_PUBLISHED_LABEL="Published Date/Time"
+COM_PODCASTMANAGER_ORDER_TITLE_LABEL="Title"
 COM_PODCASTMANAGER_SELECT_FEEDNAME=" - Select Feed - "
 COM_PODCASTMANAGER_SHOW_FEED_DESCRIPTION_DESCRIPTION="If defined, show the feed description on the page."
 COM_PODCASTMANAGER_SHOW_FEED_DESCRIPTION_LABEL="Show Feed Description"
