@@ -1,3 +1,6 @@
+17-July-2011 Michael Babker Version 1.8 Changes
++ Add ability to select default sorting for feed view
+
 14-July-2011 Michael Babker Version 1.7 Changes
 + Add ability to link to off-site media
 
